--- a/src/styles.css
+++ b/src/styles.css
@@ -10,9 +10,7 @@
 }
 body{
     margin: 0 auto;
-    height: 100%;
-    background: rgb(2,0,36);
-    background: linear-gradient(180deg, rgba(50,60,70,1) 0%, rgba(30,35,40,1) 35%, rgba(10,12,15,1) 100%);
+    background: rgba(30,35,40,1);
 }
 header{
     display: flex;
@@ -25,6 +23,7 @@ header span{
     color:rgb(230, 200, 10);
     min-width: 400px;
     font-size: 40px;
+    margin-top: 20px;
     text-align: center;
     font-weight: 500;    
 }
@@ -100,11 +99,11 @@ header span{
     
 }
 .choice:hover{
-    transition:  all 4s;
+    transition:  all 2s;
     box-shadow: inset 0 0 35px 4px rgb(140, 180, 225);
 }
 .choice:hover img{
-    transition:  all 4s;
+    transition:  all 2s;
     transform: scale(1.3);
 }
 
@@ -149,7 +148,7 @@ header span{
     min-width: 500px;
     height: 300px;
     padding: 10px;
-    margin-top: 20px;
+    margin: 20px 0 50px 0;
     overflow: auto;
 }
 .history span{
